updating web app project link

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
         <img src="images/web app dashboard.png" alt="web app dashboard">
 
           <div class="project-box">
-          <h4>Web App Dashboard <a href="https://lexborelli.github.io/Employee-directory/"><i class='bx bx-link'></i></a></h4>
+          <h4>Web App Dashboard <a href="https://lexborelli.github.io/WebApp-Dashboard/"><i class='bx bx-link'></i></a></h4>
           <p>Built an interactive dashboard for a web application using SVG graphics and javascript programming. Implemented tables, charts, graphics, and user interface components in a manner that was able to promote interactivity and usability.</p>
           </div>
           </div>
