added resume png

--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
 
     <section id="resume">
       <h2 class="resume">Resume</h2>
-
+      <img src="images/Alexas Borelli Resume.png" alt="resume">
 
 
       </section>
