--- a/index.html
+++ b/index.html
@@ -189,9 +189,30 @@
       </section>
 
       <section id="contact">
-          <h2 class="contact">Contact Information</h2>
+          <h2 class="contact-heading">Contact Me</h2>
 
-          
+          <div class="contact">
+          <div class="contact-form">
+            <label for="">Your Name</label>
+            <input type="text" id="name" placeholder="first and last name">
+          </div>
+
+          <div class="contact-form">
+            <label for="">Your Email</label>
+            <input type="text" id="email" placeholder="ex:andre@gmail.com">
+          </div>
+          <div class="contact-form">
+            <label for="">Subject</label>
+            <input type="text" id="subject" placeholder="Subject">
+          </div>
+          <div class="contact-form">
+            <label for="">Message</label>
+            <textarea id="message" placeholder="Write your message here."></textarea>
+          </div>
+          <div class="contact-form">
+            <button onclick="sendMessage()">Send</button>
+          </div>
+        </div>
       </section>
 
     
@@ -200,5 +221,7 @@
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
+    <script src="js/app.js"></script>
   </body>
 </html>
