trying to correct js message

--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
             <textarea id="message" placeholder="Write your message here."></textarea>
           </div>
           <div class="contact-form">
-            <button onclick="sendMessage()">Send</button>
+            <button onclick="sendMessage();">Send</button>
           </div>
         </div>
       </section>
