--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600&family=Roboto:wght@300&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="#">
+
     <title>My Portfolio</title>
   </head>
   <body>
