--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
             <textarea id="message" placeholder="Write your message here." required></textarea>
           </div>
           <div class="contact-form">
-            <button type="submit" class="sumbit-btn">Send</button>
+            <button type="submit" class="submit-btn">Send</button>
           </div>
         </form>
       </section>
