fixed linkedin link

--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
             </div>
             <div class="linkclick">
               <p>You can access my LinkedIn by clicking the url below!</p>
-              <p>LinkedIn: <a class="linkedlink" href="www.linkedin.com/in/alexas-borelli-8139328a">www.linkedin.com/in/alexas-borelli-8139328a</a></p>
+              <p>LinkedIn: <a class="linkedlink" href="https://www.linkedin.com/in/alexas-borelli/">www.linkedin.com/in/alexas-borelli</a></p>
               <button id="close-modal">X</button>
             </div>
 
