--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     <section id="about-me">
       <h2 class="about">About Me</h2>
       <p>Hi, my name is Alexas Borelli!</p>
-      <p>I'm a former healthcare professinonal who is boldly transitioning from roles as an EMT and patient Care/HSG coordinator into the dynamic world of technology. The decision to pivot from medicine to tech wasn't made lightly. It required courage, adaptability, and a willingness to learn from scratch. However, I immersed myself in coding languages and front-end development.</p>
+      <p>I'm a former healthcare professional who is boldly transitioning from roles as an EMT and patient Care/HSG coordinator into the dynamic world of technology. The decision to pivot from medicine to tech wasn't made lightly. It required courage, adaptability, and a willingness to learn from scratch. However, I immersed myself in coding languages and front-end development.</p>
       <p>My background in medicine has helped me approach problem-solving from unique angles and design solutions that are not only efficient but also user-centered. Driven by my passion and inherent curiosity for the step-by-step progression in utilizing codes, CSS, and javascript, I discovered satisfaction in designing visually captivating web applications.</p>
       <p>Away from the screen, you can find me indulging in desserts, mastering a new recipe, and binging Netflix shows.</p>
     </section>
