trying to get overlay to cover white space

--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
               <li>Git</li>
               <li>Object-Oriented Programming</li>
               <li> AJAX Programming</li>
+              <li>Bootstrap Basics</li>
             </ul>
             </div>
     
