added two new projects

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
     </section>
 
     <section class="projects" id="projects">
-      <h2 class="project-heading">Projects</h2>
+      <h2 class="project-heading">Software Engineer Prrojects</h2>
 
       <div class="projects-container">
 
@@ -161,6 +161,28 @@
 
       <div class="container-4">
         <div class="project">
+        <img src="images/RandomQuoteGenerator.png" alt="Random Quotes">
+
+          <div class="project-box">
+          <h4>Random Quote Generator <a href="https://lexborelli.github.io/A-Random-Quote-Generator/"><i class='bx bx-link'></i></a></h4>
+          <p>Designed an application that displays variety of random famous quotes each time a button is clicked. Basic JavaScript syntax, variables, loops, conditionals, and object literals were used to construct this application.</p>
+          </div>
+          </div>
+      </div>
+
+      <div class="container-5">
+        <div class="project">
+        <img src="images/datafiltering.png" alt="Data Pagination and Filtering">
+
+          <div class="project-box">
+          <h4>Data Pagination and Filtering <a href="https://lexborelli.github.io/Data-Pagination-and-Filtering-Project/"><i class='bx bx-link'></i></a></h4>
+          <p>The data file that contains information for 42 students, including name, email, and picture. Used technique known as “pagination” to enhance the usability of a web page.</p>
+          </div>
+          </div>
+      </div>
+
+      <div class="container-6">
+        <div class="project">
         <img src="images/Employeedirectoryproject.png" alt="employee directory">
 
           <div class="project-box">
@@ -170,18 +192,8 @@
           </div>
       </div>
 
-      <div class="container-5">
-        <div class="project">
-        <img src="images/responsivelayoutsite.png" alt="Responsive layout">
-
-          <div class="project-box">
-          <h4>Mobile-First Responsive Layout <a href="https://lexborelli.github.io/Responsive-layout-site/"><i class='bx bx-link'></i></a></h4>
-          <p>Designed a web page that looked and functioned well on multiple screen sizes. Using Html, Css, and responsive design, a mobile-first web page with alayout that adjusts to fit mobile phones, tablets, and desktops displays.</p>
-          </div>
-          </div>
-      </div>
-
-      <div class="container-6">
+      
+      <div class="container-7">
         <div class="project">
         <img src="images/webappdashboard.png" alt="web app dashboard">
 
