--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
     </section>
 
     <section class="projects" id="projects">
-      <h2 class="project-heading">Software Engineer Prrojects</h2>
+      <h2 class="project-heading">Projects</h2>
 
       <div class="projects-container">
 
