edited home container

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     </div>
       <div class="breakpoint">
       <hr>
-      <h2>Software Engineer</h2>
+      <h2>Front End Engineer</h2>
     </div>
       
 
