updated my projects

--- a/index.html
+++ b/index.html
@@ -123,12 +123,12 @@
 
       <div class="container-1">
         <div class="project">
-        <img src="images/interactivegalleryproject.png" alt="interactive gallery project">
+        <img src="images/OOPGameShow.png" alt="OOP Game App">
 
           <div class="project-box">
-          <h4>Interactive Photo Gallery <a href="https://lexborelli.github.io/Interactive-Photo-Gallery/"><i class='bx bx-link'></i></a>
+          <h4>Object-Oriented-Programming Game App-<a href="https://lexborelli.github.io/Object-Oriented-Programming-Game-App/"><i class='bx bx-link'></i></a>
           </h4>
-          <p>An interactive, searchable gallery of photos.</p>
+          <p>I used JavaScript and OOP (Object-Oriented Programming) to select a random, hidden phrase, which a player tries to guess, by clicking letters on an onscreen keyboard. The players goal is to guess all the letters in a hidden, random phrase. </p>
           </div>
           </div>
       
@@ -139,11 +139,12 @@
 
       <div class="container-2">
         <div class="project">
-        <img src="images/onlineregistrationsite.png" alt="online registration form">
+        <img src="images/Interactiveform.png" alt="Interactive form">
 
           <div class="project-box">
-          <h4>Online Registration Web Form <a href="https://lexborelli.github.io/Online-Registration-Form-/"><i class='bx bx-link'></i></a></h4>
-          <p>A web form that allows users to sign up for a newsletter on the internet. This project incorporated building a responsive, mobile-first registration form using a variety of HTML elements.</p>
+          <h4>An Interactive Web Form <a href="https://lexborelli.github.io/Interactive-Form/"><i class='bx bx-link'></i></a></h4>
+          <p>JavaScript was used to enhance an interactive registration form for a fictional Full Stack conference. To make the form more user-friendly by:
+            1.Adding customized and conditional behavior and interactivity 2.Validating user input and providing helpful error messages when the user enters invalid information.</p>
         </div>
         </div>
       </div>
@@ -195,11 +196,14 @@
       
       <div class="container-7">
         <div class="project">
-        <img src="images/webappdashboard.png" alt="web app dashboard">
+        <img src="images/PythonSpreadsheetAnalysis.png" alt="Python Spreadsheet Analysis">
 
           <div class="project-box">
-          <h4>Web App Dashboard <a href="https://lexborelli.github.io/WebApp-Dashboard/"><i class='bx bx-link'></i></a></h4>
-          <p>Built an interactive dashboard for a web application using SVG graphics and javascript programming. Implemented tables, charts, graphics, and user interface components in a manner that was able to promote interactivity and usability.</p>
+          <h4>Python Spreadsheet Analysis <a href="https://replit.com/@gabadactyl/CFGFinalPython"><i class='bx bx-link'></i></a></h4>
+          <p>Utilized Python and Pandas to do a basic data analysis on a spreadsheet with a fellow learner.
+            Collected all of the sales from each month into a single list
+            Output the total sales across all months.Monthly changes as a percentage
+            The average.Months with the highest and lowest sales</p>
           </div>
           </div>
       </div>
